--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.82.0">
-    <title>Album example · Bootstrap v5.0</title>
+    <title>Surojit Saha</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
 
@@ -52,7 +52,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Surojit</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Surojit</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -62,7 +62,7 @@
                 <a class="nav-link" href="#">Home</a>
                 </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">LinkedIn</a>
+                <a class="nav-link" href="https://www.linkedin.com/in/surojit-saha">LinkedIn</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Github</a>
@@ -71,7 +71,7 @@
                 <a class="nav-link" href="{% static 'Assignment-05.pdf' %}">Resume</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
               </li>
             </ul>
           </div>
