--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -68,7 +68,7 @@
                 <a class="nav-link" href="#">Github</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% static 'Assignment-05.pdf' %}">Resume</a>
+                <a class="nav-link" href="{% static 'resume.txt' %}">Resume</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
