--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    {%load staticfiles%}
+    {%load static%}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
