--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -59,7 +59,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://www.linkedin.com/in/surojit-saha">LinkedIn</a>
@@ -71,7 +71,7 @@
                 <a class="nav-link" href="{% static 'Resume.pdf' %}">Resume</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+                <a class="nav-link" href="{% url 'allblogs' %}">Projects</a>
               </li>
             </ul>
           </div>
