--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -58,19 +58,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="{% url 'home' %}">Home</a>
               </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.linkedin.com/in/surojit-saha">LinkedIn</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Github</a>
+              <a class="nav-link" href="https://github.com/surojitsaha56">Github</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% static 'resume.txt' %}">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+              <a class="nav-link" href="{% url 'allblogs' %}">Projects</a>
             </li>
           </ul>
         </div>
@@ -80,7 +80,7 @@
 
 <main>
     <div class="container">
-        <h1 class="text-center pt-4">Welcome to Surojit's Blog</h1>
+        <h1 class="text-center pt-4">Welcome to Surojit's Portfolio</h1>
         <br><br>
         <h2>Latest Posts</h2>
         <hr>
